--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mollis/harkka.git"
   },
+  
+  "dependencies": {
+      "express": "^4.17.1"
+  },
+
   "keywords": [
     "fullstack",
     "open"
   ],
+
   "author": "Harri Huttunen",
   "license": "ISC",
+
   "bugs": {
     "url": "https://github.com/Mollis/harkka/issues"
   },
+  
   "homepage": "https://github.com/Mollis/harkka#readme"
 }
